blrlblelrlrl
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: In member function ‘bool midiMind::ProcessorManager::setChainEnabled(const std::string&, bool)’:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:203:21: error: ‘using std::__shared_ptr_access<midiMind::ProcessorChain, __gnu_cxx::_S_atomic, false, false>::element_type = class midiMind::ProcessorChain’ {aka ‘class midiMind::ProcessorChain’} has no member named ‘enable’; did you mean ‘bool midiMind::ProcessorChain::enabled_’? (accessible via ‘bool midiMind::ProcessorChain::isEnabled() const’)
  203 |         it->second->enable();
      |                     ^~~~~~
      |                     isEnabled()
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:205:21: error: ‘using std::__shared_ptr_access<midiMind::ProcessorChain, __gnu_cxx::_S_atomic, false, false>::element_type = class midiMind::ProcessorChain’ {aka ‘class midiMind::ProcessorChain’} has no member named ‘disable’
  205 |         it->second->disable();
      |                     ^~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: At global scope:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:549:38: error: ‘mutex_’ was not declared in this scope
  549 |     std::lock_guard<std::mutex> lock(mutex_);
      |                                      ^~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:550:5: error: ‘messageOutputCallback_’ does not name a type
  550 |     messageOutputCallback_ = callback;
      |     ^~~~~~~~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:557:6: error: ‘ProcessorManager’ has not been declared
  557 | json ProcessorManager::getStatistics() const {
      |      ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:557:40: error: non-member function ‘json getStatistics()’ cannot have cv-qualifier
  557 | json ProcessorManager::getStatistics() const {
      |                                        ^~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: In function ‘json getStatistics()’:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:558:38: error: ‘mutex_’ was not declared in this scope
  558 |     std::lock_guard<std::mutex> lock(mutex_);
      |                                      ^~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:561:28: error: ‘chains_’ was not declared in this scope
  561 |     stats["chain_count"] = chains_.size();
      |                            ^~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:562:35: error: ‘messagesProcessed_’ was not declared in this scope
  562 |     stats["messages_processed"] = messagesProcessed_.load();
      |                                   ^~~~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: At global scope:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:574:6: error: ‘ProcessorManager’ has not been declared
  574 | void ProcessorManager::resetStatistics() {
      |      ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: In function ‘void resetStatistics()’:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:575:38: error: ‘mutex_’ was not declared in this scope
  575 |     std::lock_guard<std::mutex> lock(mutex_);
      |                                      ^~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:577:5: error: ‘messagesProcessed_’ was not declared in this scope
  577 |     messagesProcessed_ = 0;
      |     ^~~~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:579:30: error: ‘chains_’ was not declared in this scope; did you mean ‘chain’?
  579 |     for (auto& [id, chain] : chains_) {
      |                              ^~~~~~~
      |                              chain
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:583:5: error: ‘Logger’ has not been declared
  583 |     Logger::info("ProcessorManager", "Statistics reset");
      |     ^~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: At global scope:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:590:13: error: ‘ProcessorManager’ has not been declared
  590 | std::string ProcessorManager::generateChainId() {
      |             ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: In function ‘std::string generateChainId()’:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:591:19: error: ‘chainIdCounter_’ was not declared in this scope
  591 |     uint32_t id = chainIdCounter_++;
      |                   ^~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: At global scope:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:595:6: error: ‘ProcessorManager’ has not been declared
  595 | void ProcessorManager::initializePresets() {
      |      ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: In function ‘void initializePresets()’:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:596:5: error: ‘Logger’ has not been declared
  596 |     Logger::info("ProcessorManager", "Initializing presets...");
      |     ^~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:599:5: error: ‘presets_’ was not declared in this scope
  599 |     presets_["transpose_up"] = {
      |     ^~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:676:5: error: ‘Logger’ has not been declared
  676 |     Logger::info("ProcessorManager",
      |     ^~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: At global scope:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:680:17: error: ‘MidiProcessor’ was not declared in this scope; did you mean ‘midiMind::MidiProcessor’?
  680 | std::shared_ptr<MidiProcessor> ProcessorManager::createProcessorFromType(
      |                 ^~~~~~~~~~~~~
      |                 midiMind::MidiProcessor
In file included from /home/pi/midiMind/backend/src/midi/processing/ProcessorChain.h:17,
                 from /home/pi/midiMind/backend/src/midi/processing/ProcessorManager.h:32,
                 from /home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:21:
/home/pi/midiMind/backend/src/midi/processing/MidiProcessor.h:34:7: note: ‘midiMind::MidiProcessor’ declared here
   34 | class MidiProcessor {
      |       ^~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:680:30: error: template argument 1 is invalid
  680 | std::shared_ptr<MidiProcessor> ProcessorManager::createProcessorFromType(
      |                              ^
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:680:32: error: ‘ProcessorManager’ has not been declared
  680 | std::shared_ptr<MidiProcessor> ProcessorManager::createProcessorFromType(
      |                                ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: In function ‘int createProcessorFromType(const std::string&)’:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:684:5: error: ‘Logger’ has not been declared
  684 |     Logger::warning("ProcessorManager",
      |     ^~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:686:12: error: cannot convert ‘std::nullptr_t’ to ‘int’ in return
  686 |     return nullptr;
      |            ^~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: At global scope:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:689:1: error: expected declaration before ‘}’ token
  689 | } // namespace midiMind
      | ^
[ 86%] Building CXX object CMakeFiles/midimind.dir/src/midi/sysex/SysExParser.cpp.o
make[2]: *** [CMakeFiles/midimind.dir/build.make:401: CMakeFiles/midimind.dir/src/midi/processing/ProcessorManager.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/midimind.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
